video gallery responsive,steam link added after trailer,subscribe button aligned correctly,overall responsive done

--- a/index.html
+++ b/index.html
@@ -46,8 +46,22 @@
 			<div class="collapse navbar-collapse navbar-right hidden-xs">
 				<nav class="cl-effect-5" id="cl-effect-5">
 					<ul class="nav navbar-nav pull-right" style="margin-top: 0.5%">
-						<li><a href="https://store.steampowered.com/app/886390/A_RollBack_Story/" target="_blank"><span data-hover="Donate">Donate</span></a></li>
-						<li style="margin-top: -4%"><a href="https://store.steampowered.com/app/886390/A_RollBack_Story/" target="_blank" class="btn btn-lg btn-danger"><span style="font-size: small; width: 150px; height: 25px;margin-top: 7px" data-hover="Demo">Demo</span></a></li>
+						<li>
+
+							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+
+								<input type="hidden" name="cmd" value="_s-xclick">
+								<input type="hidden" name="hosted_button_id" value="UY3K2B4N494YE">
+								<button style="background: none; border: none">
+									<a class="btn btn-lg btn-danger" target="_blank">
+										<span style="font-size: small; width: 150px; height: 25px;margin-top: 7px" data-hover="Donate">Donate</span>
+									</a>
+								</button>
+
+							</form>
+
+						</li>
+						<li style="margin-top: -4%"><a href="https://store.steampowered.com/app/886390/A_RollBack_Story/" target="_blank" class="btn btn-lg btn-success"><span style="font-size: small; width: 150px; height: 25px;margin-top: 7px" data-hover="Demo">Demo</span></a></li>
 					</ul>
 					<ul class="nav navbar-nav">
 						<li><a href="https://iquantile.com" target="_blank"><span data-hover="Home">Home</span></a></li>
@@ -63,8 +77,20 @@
 					<ul class="nav navbar-nav" style="margin-top: 0.5%">
 						<li><a href="https://iquantile.com" target="_blank"><span data-hover="Home">Home</span></a></li>
 						<li><a href="#gallery" class="scroll"><span data-hover="Gallery">Gallery</span></a></li>
-						<li><a href="https://store.steampowered.com/app/886390/A_RollBack_Story/" target="_blank"><span data-hover="Donate">Donate</span></a></li>
-						<li><a href="https://store.steampowered.com/app/886390/A_RollBack_Story/" target="_blank" class="btn btn-lg btn-danger"><span style="font-size: small; width: 150px; height: 25px;margin-top: 7px;line-height: 1" data-hover="Demo">Demo</span></a></li>
+
+						<li>
+							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+								<input type="hidden" name="cmd" value="_s-xclick">
+								<input type="hidden" name="hosted_button_id" value="UY3K2B4N494YE">
+								<button style="background: none; border: none">
+									<a class="btn btn-lg btn-danger" target="_blank">
+										<span style="font-size: small; width: 150px; height: 25px;margin-top: 7px" data-hover="Donate">Donate</span>
+									</a>
+								</button>
+							</form>
+						</li>
+
+						<li><a href="https://store.steampowered.com/app/886390/A_RollBack_Story/" target="_blank" class="btn btn-lg btn-success"><span style="font-size: small; width: 150px; height: 25px;margin-top: 7px;line-height: 1" data-hover="Demo">Demo</span></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -412,7 +438,7 @@
 
 			<div style="cursor: pointer; margin: 5%">
 
-				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/gallery/gallery4.png" alt="video" data-toggle="modal" data-target="#modal1"></a>
+				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/videothumbline/videothumbline1.PNG" alt="video" data-toggle="modal" data-target="#modal1"></a>
 
 			</div>
 
@@ -459,7 +485,7 @@
 
 			<div style="cursor: pointer; margin: 5%">
 
-				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/gallery/gallery1.png" alt="video" data-toggle="modal" data-target="#modal6"></a>
+				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/videothumbline/videothumbline2.PNG" alt="video" data-toggle="modal" data-target="#modal6"></a>
 
 			</div>
 
@@ -507,7 +533,7 @@
 
 			<div style="cursor: pointer; margin: 5%">
 
-				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/gallery/gallery3.png" alt="video" data-toggle="modal" data-target="#modal4"></a>
+				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/videothumbline/videothumbline3.PNG" alt="video" data-toggle="modal" data-target="#modal4"></a>
 
 			</div>
 
@@ -564,7 +590,7 @@
 
 			<div style="cursor: pointer; margin: 5%">
 
-				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/gallery/gallery4.png" alt="video" data-toggle="modal" data-target="#modal2"></a>
+				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/videothumbline/videothumbline1.PNG" alt="video" data-toggle="modal" data-target="#modal2"></a>
 
 			</div>
 
@@ -611,7 +637,7 @@
 
 			<div style="cursor: pointer; margin: 5%">
 
-				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/gallery/gallery1.png" alt="video" data-toggle="modal" data-target="#modal7"></a>
+				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/videothumbline/videothumbline2.PNG" alt="video" data-toggle="modal" data-target="#modal7"></a>
 
 			</div>
 
@@ -659,7 +685,7 @@
 
 			<div style="cursor: pointer; margin: 5%">
 
-				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/gallery/gallery3.png" alt="video" data-toggle="modal" data-target="#modal5"></a>
+				<a><img style="max-width: 100%" class="img-fluid z-depth-1" src="images/videothumbline/videothumbline3.PNG" alt="video" data-toggle="modal" data-target="#modal5"></a>
 
 			</div>
 
@@ -675,7 +701,7 @@
 <!-- mail -->
 <div class="mail" id="mail">
 	<div class="container">
-		<h3 class="w3l_head w3l_head1">Feed back</h3>
+		<h3 class="w3l_head w3l_head1">Feedback</h3>
 		<p class="w3ls_head_para w3ls_head_para1">send us a message</p>
 		<div class="w3_mail_grids">
 			<form action="#" method="post">
@@ -717,8 +743,19 @@
 		<div class="w3ls_footer_grid_leftr_subscribe">
 			<h3>Subscribe</h3>
 			<span class="input-group-btn">
-				<input type="email" class="form-control" placeholder="Enter your email">
-			 	<button style="margin-left: 5%" class="btn btn-theme" type="submit">Subscribe</button>
+				<div class="container">
+					<div class="row">
+						<div class="form-group name1 ">
+							<input type="text" class="form-control" placeholder="Enter your name">
+						</div>
+
+						<div class="form-group name2">
+							<input type="text" class="form-control"  placeholder="Enter your email">
+						</div>
+						<button style="float: left" class="btn btn-theme" type="submit">Subscribe</button>
+					</div>
+				</div>
+
 			 </span>
 		</div>
 
@@ -739,7 +776,7 @@
 						<div class="clearfix"> </div>
 					</div>
 				</a>
-				<a href="https://twitter.com/iquantile" target="_blank">
+				<a href="https://twitter.com/iqunatilegames?s=09" target="_blank">
 					<div class="col-md-4 w3ls_footer_grid_left">
 						<div class="w3ls_footer_grid_leftl">
 							<i class="fa fa-twitter" aria-hidden="true"></i>
